[gd_scene load_steps=40 format=2]

[ext_resource path="res://Sprites/Enemies/Abaddon/sorcerer attack_Animation 1_7.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Enemies/Abaddon/villain.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemies/Abaddon/sorcerer attack_Animation 1_5.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemies/Abaddon/sorcerer attack_Animation 1_6.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemies/Abaddon/sorcerer attack_Animation 1_8.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemies/Abaddon/sorcerer attack_Animation 1_3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemies/Abaddon/sorcerer attack_Animation 1_0.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Enemies/Abaddon/sorcerer attack_Animation 1_4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Enemies/Abaddon/sorcerer attack_Animation 1_2.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Enemies/Abaddon/sorcerer attack_Animation 1_1.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Enemies/Abaddon/sorcerer attack_Animation 1_9.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Enemies/Abaddon/Explosion 2 SpriteSheet.png" type="Texture" id=12]
[ext_resource path="res://Scenes/Enemies/Abaddon.gd" type="Script" id=13]
[ext_resource path="res://Resources/Music/Abaddon.wav" type="AudioStream" id=14]
[ext_resource path="res://Scenes/Enemies/BossBats.tscn" type="PackedScene" id=15]
[ext_resource path="res://Resources/abaddondeath.mp3" type="AudioStream" id=16]
[ext_resource path="res://Sprites/Enemies/Abaddon/villain hurt.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 2 ) ],
"loop": true,
"name": "Attack",
"speed": 11.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 2 ) ],
"loop": false,
"name": "hurt",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 12 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 12 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 12 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 12 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 12 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 12 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 12 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 12 )
region = Rect2( 384, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 12 )
region = Rect2( 432, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 12 )
region = Rect2( 480, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 12 )
region = Rect2( 528, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 12 )
region = Rect2( 576, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 12 )
region = Rect2( 624, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 12 )
region = Rect2( 672, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 12 )
region = Rect2( 720, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 12 )
region = Rect2( 768, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 12 )
region = Rect2( 816, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 10 ), SubResource( 12 ), SubResource( 12 ), SubResource( 11 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "Death",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 14.5, 50.5 )

[sub_resource type="CircleShape2D" id=21]
radius = 160.012

[node name="Abaddon" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 16
collision_mask = 108
script = ExtResource( 13 )
bat_scene = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 26, -1 )
scale = Vector2( 0.730332, 0.800027 )
frames = SubResource( 1 )
animation = "hurt"
offset = Vector2( -31, -79 )

[node name="Death" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -59 )
scale = Vector2( 3.62254, 4.25625 )
frames = SubResource( 20 )
animation = "Death"
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -47.5 )
shape = SubResource( 22 )

[node name="DetectRadius" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8

[node name="Radius" type="CollisionShape2D" parent="DetectRadius"]
position = Vector2( 0, -20 )
shape = SubResource( 21 )

[node name="SpawnPoint1" type="Position2D" parent="."]
position = Vector2( 34, 13 )

[node name="SpawnPoint2" type="Position2D" parent="."]
position = Vector2( -24, 14 )

[node name="SpawnPoint3" type="Position2D" parent="."]
position = Vector2( -31, -31 )

[node name="SpawnPoint4" type="Position2D" parent="."]
position = Vector2( 44, -33 )

[node name="BossThemePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -8.0

[node name="AttackTimer" type="Timer" parent="."]

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )

[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
